--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,7 +16,10 @@
             <artifactId>enrtity</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
         <!-- Spring-Mybatis BEGIN-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -44,6 +47,15 @@
             <version>1.3.1</version>
         </dependency>
         <!-- END -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+        <!--消息组件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
     </dependencies>
 
