--- a/service/src/main/resources/bootstrap.yml
+++ b/service/src/main/resources/bootstrap.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: service
@@ -7,6 +8,10 @@ spring:
         enabled: true
         service-id: CONFIGEUREKA
       profile: dev
+    stream:
+      binders:
+        myMseeage:
+          group: service
   rabbitmq:
     host: 192.168.26.128
     username: hadoop
