--- a/api_zuul/src/main/resources/application.yml
+++ b/api_zuul/src/main/resources/application.yml
@@ -16,11 +16,17 @@ zuul:
     #   aaaaa: 可以随便写
     aaaa:
       path: /myservice/**
+      # 服务名
       serviceId: serviceeureka
+      # 设置Cookie可传递
+      #sensitiveHeaders:
     ####简洁写法
     #serviceeureka: /myservice/**
   #禁止外部访问(排除某些路由) 接口 是set集合
   ignored-patterns:
     - /myservice/getAll
-    - /serviceeureka/getAll
-    - /**/getAll
+    #- /serviceeureka/getAll
+    #- /**/getAll
+
+    #忽略全部服务敏感头都可传递Cookie
+  sensitive-headers:
