Zuul 网关访问服务Post Get请求校验

--- a/api_zuul/src/main/resources/applicationd.properties
+++ b/api_zuul/src/main/resources/applicationd.properties
@@ -9,3 +9,23 @@ spring.application.name=ZuulEureka
 
 # zuul配置
 zuul.routes.
+################ Zuul动态服务配置服务路由 #########################
+#zuul:
+#routes:
+#   aaaaa: 可以随便写
+#aaaa:
+#path: /myservice/**
+# 服务名
+#serviceId: ServiceEureka
+# 设置Cookie可传递
+#sensitiveHeaders:
+####简洁写法
+#serviceeureka: /myservice/**
+#禁止外部访问(排除某些路由) 接口 是set集合
+#ignored-patterns:
+#- /myservice/getAll
+#- /serviceeureka/getAll
+#- /**/getAll
+
+#忽略全部服务敏感头都可传递Cookie
+#sensitive-headers:
